--- a/source/photo.html
+++ b/source/photo.html
@@ -6,6 +6,7 @@
   <title>Пинк</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
 </head>
 
 <body>
@@ -234,12 +235,12 @@
                 </div>
               </li>
             </ul>
-              <div class="editor__button-wrapper">
-                <button class="button editor__pushbutton editor__pushbutton--send">Запостить</button>
-                <button class="button editor__pushbutton editor__pushbutton--cancel">Отмена</button>
-              </div>
+            <div class="editor__button-wrapper">
+              <button class="button editor__pushbutton editor__pushbutton--send">Запостить</button>
+              <button class="button editor__pushbutton editor__pushbutton--cancel">Отмена</button>
             </div>
           </div>
+        </div>
       </form>
     </section>
   </main>
