--- a/source/form.html
+++ b/source/form.html
@@ -91,7 +91,7 @@
         </div>
         <fieldset class="contest__fieldset container">
           <legend class="contest__legend contest__legend--information">Контактная информация</legend>
-          <div class="contest__item">
+          <div class="contest__item contest__item--number">
             <label class="contest__label-item" for="phone">Номер телефона</label>
             <input class="contest__input" id="phone" type="text" placeholder="Номер, пожалуйста">
           </div>
