--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="page-header page-header--index">
-    <div class="page-header__сontainer container">
+    <div class="page-header__сontainer">
       <a class="page-header__logo">
         <span class="page-header__image page-header__image--mobile"><svg class="page-header__logo-svg" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
             <g>
@@ -160,12 +160,12 @@
         </div>
     </section>
     <section class="page-main__price price">
-      <div class="price__wrapper">
+      <div class="price__wrapper container">
         <h4 class="visually-hidden">Тарифы и цены</h4>
         <table class="price__table">
           <thead>
-            <tr class="price__row">
-              <td class="price__title price__name visually-hidden">Тариф
+            <tr class="price__row price__row--test">
+              <td class="price__title price__name price__name--hidden visually-hidden">Тариф</td>
               <td class="price__title price__name">База
                 <span class="price__cost">1,99 USD</span></td>
               <td class="price__title price__name price__name--hit">Стандарт
@@ -174,21 +174,28 @@
                 <span class="price__cost">3,99 USD</span></td>
             </tr>
           </thead>
-          <tr>
+          <tr class="price__row">
             <td class="price__row--name">
               Розовый фильтр
             </td>
             <td class="price__row price__row--settings">
               <span class="price__settings-name">Розовый Фильтр</span>
-              <span class="price__settings price__settings--on"><span class="visually-hidden">Да</span></span>
+              <svg class="price__svg price__svg--on" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.698px" height="16.09px" viewBox="-82.357 4.875 21.698 16.09" enable-background="new -82.357 4.875 21.698 16.09" xml:space="preserve">
+                <path d="M-60.953,5.167c-0.391-0.391-1.023-0.391-1.414,0L-75.75,18.551l-4.9-4.9c-0.391-0.391-1.023-0.391-1.414,0 s-0.391,1.023,0,1.414l5.607,5.607c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l14.09-14.0 C-60.562,6.191-60.562,5.558-60.953,5.167z" />
+              </svg><span class="visually-hidden">Да</span>
             </td>
             <td class="price__row price__row--settings">
               <span class="price__settings-name">Розовый Фильтр</span>
-              <span class="price__settings price__settings--on"><span class="visually-hidden">Да</span></span>
+              <svg class="price__svg price__svg--on" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.698px" height="16.09px" viewBox="-82.357 4.875 21.698 16.09" enable-background="new -82.357 4.875 21.698 16.09" xml:space="preserve">
+                <path d="M-60.953,5.167c-0.391-0.391-1.023-0.391-1.414,0L-75.75,18.551l-4.9-4.9c-0.391-0.391-1.023-0.391-1.414,0 s-0.391,1.023,0,1.414l5.607,5.607c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l14.09-14.0 C-60.562,6.191-60.562,5.558-60.953,5.167z" />
+              </svg>
+              <span class="visually-hidden">Да</span>
             </td>
             <td class="price__row price__row--settings">
               <span class="price__settings-name">Розовый Фильтр</span>
-              <span class="price__settings price__settings--on"><span class="visually-hidden">Да</span></span>
+              <svg class="price__svg price__svg--on" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.698px" height="16.09px" viewBox="-82.357 4.875 21.698 16.09" enable-background="new -82.357 4.875 21.698 16.09" xml:space="preserve">
+                <path d="M-60.953,5.167c-0.391-0.391-1.023-0.391-1.414,0L-75.75,18.551l-4.9-4.9c-0.391-0.391-1.023-0.391-1.414,0 s-0.391,1.023,0,1.414l5.607,5.607c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l14.09-14.0 C-60.562,6.191-60.562,5.558-60.953,5.167z" />
+              </svg><span class="visually-hidden">Да</span>
             </td>
           </tr>
           <tr>
@@ -197,15 +204,21 @@
             </td>
             <td class="price__row price__row--settings">
               <span class="price__settings-name">Смайлики</span>
-              <span class="price__settings price__settings--off"><span class="visually-hidden">Нет</span></span>
+              <svg class="price__svg price__svg--off" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.752px" height="26.752px" viewBox="0 0 26.752 26.752" enable-background="new 0 0 26.752 26.752" xml:space="preserve">
+                <path d="M15.497,13.376L26.312,2.562c0.586-0.585,0.586-1.535,0-2.121s-1.535-0.586-2.121,0L13.376,11.255L2.562,0.439 c-0.586-0.586-1.535-0.586-2.121,0c-0.586,0.585-0.586,1.535,0,2.121l10.814,10.815L0.439,24.19c-0.586,0.586-0.586,1.535,0,2.121 c0.293,0.293,0.677,0.439,1.061,0.439s0.768-0.146,1.061-0.439l10.815-10.814L24.19,26.312c0.293,0.293,0.677,0.439,1.061,0.439 s0.768-0.146,1.061-0.439c0.586-0.586,0.586-1.535,0-2.121L15.497,13.376z" />
+              </svg><span class="visually-hidden">Нет</span>
             </td>
             <td class="price__row price__row--settings">
               <span class="price__settings-name">Смайлики</span>
-              <span class="price__settings price__settings--on"><span class="visually-hidden">Да</span></span>
+              <svg class="price__svg price__svg--on" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.698px" height="16.09px" viewBox="-82.357 4.875 21.698 16.09" enable-background="new -82.357 4.875 21.698 16.09" xml:space="preserve">
+                <path d="M-60.953,5.167c-0.391-0.391-1.023-0.391-1.414,0L-75.75,18.551l-4.9-4.9c-0.391-0.391-1.023-0.391-1.414,0 s-0.391,1.023,0,1.414l5.607,5.607c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l14.09-14.0 C-60.562,6.191-60.562,5.558-60.953,5.167z" />
+              </svg><span class="visually-hidden">Да</span>
             </td>
             <td class="price__row price__row--settings">
               <span class="price__settings-name">Смайлики</span>
-              <span class="price__settings price__settings--on"><span class="visually-hidden">Да</span></span>
+              <svg class="price__svg price__svg--on" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.698px" height="16.09px" viewBox="-82.357 4.875 21.698 16.09" enable-background="new -82.357 4.875 21.698 16.09" xml:space="preserve">
+                <path d="M-60.953,5.167c-0.391-0.391-1.023-0.391-1.414,0L-75.75,18.551l-4.9-4.9c-0.391-0.391-1.023-0.391-1.414,0 s-0.391,1.023,0,1.414l5.607,5.607c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l14.09-14.0 C-60.562,6.191-60.562,5.558-60.953,5.167z" />
+              </svg><span class="visually-hidden">Да</span>
             </td>
           </tr>
           <tr>
@@ -214,15 +227,22 @@
             </td>
             <td class="price__row price__row--settings">
               <span class="price__settings-name">Комментарии</span>
-              <span class="price__settings price__settings--off"><span class="visually-hidden">Нет</span></span>
+              <svg class="price__svg price__svg--off" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.752px" height="26.752px" viewBox="0 0 26.752 26.752" enable-background="new 0 0 26.752 26.752" xml:space="preserve">
+                <path d="M15.497,13.376L26.312,2.562c0.586-0.585,0.586-1.535,0-2.121s-1.535-0.586-2.121,0L13.376,11.255L2.562,0.439 c-0.586-0.586-1.535-0.586-2.121,0c-0.586,0.585-0.586,1.535,0,2.121l10.814,10.815L0.439,24.19c-0.586,0.586-0.586,1.535,0,2.121 c0.293,0.293,0.677,0.439,1.061,0.439s0.768-0.146,1.061-0.439l10.815-10.814L24.19,26.312c0.293,0.293,0.677,0.439,1.061,0.439 s0.768-0.146,1.061-0.439c0.586-0.586,0.586-1.535,0-2.121L15.497,13.376z" />
+              </svg><span class="visually-hidden">Нет</span>
             </td>
             <td class="price__row price__row--settings">
               <span class="price__settings-name">Комментарии</span>
-              <span class="price__settings price__settings--off"><span class="visually-hidden">Нет</span></span>
+              <svg class="price__svg price__svg--off" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.752px" height="26.752px" viewBox="0 0 26.752 26.752" enable-background="new 0 0 26.752 26.752" xml:space="preserve">
+                <path d="M15.497,13.376L26.312,2.562c0.586-0.585,0.586-1.535,0-2.121s-1.535-0.586-2.121,0L13.376,11.255L2.562,0.439 c-0.586-0.586-1.535-0.586-2.121,0c-0.586,0.585-0.586,1.535,0,2.121l10.814,10.815L0.439,24.19c-0.586,0.586-0.586,1.535,0,2.121 c0.293,0.293,0.677,0.439,1.061,0.439s0.768-0.146,1.061-0.439l10.815-10.814L24.19,26.312c0.293,0.293,0.677,0.439,1.061,0.439 s0.768-0.146,1.061-0.439c0.586-0.586,0.586-1.535,0-2.121L15.497,13.376z" />
+              </svg>
+              <span class="visually-hidden">Нет</span>
             </td>
             <td class="price__row price__row--settings">
               <span class="price__settings-name">Комментарии</span>
-              <span class="price__settings price__settings--on"><span class="visually-hidden">Да</span></span>
+              <svg class="price__svg price__svg--on" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.698px" height="16.09px" viewBox="-82.357 4.875 21.698 16.09" enable-background="new -82.357 4.875 21.698 16.09" xml:space="preserve">
+                <path d="M-60.953,5.167c-0.391-0.391-1.023-0.391-1.414,0L-75.75,18.551l-4.9-4.9c-0.391-0.391-1.023-0.391-1.414,0 s-0.391,1.023,0,1.414l5.607,5.607c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l14.09-14.0 C-60.562,6.191-60.562,5.558-60.953,5.167z" />
+              </svg><span class="visually-hidden">Да</span>
             </td>
           </tr>
         </table>
