--- a/source/form.html
+++ b/source/form.html
@@ -27,13 +27,13 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list main-nav__list--open">
             <li class="site-list__item">
-              <a class="site-list__link site-list__link--active">Главная</a>
+              <a class="site-list__link site-list__link--active" href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
               <a class="site-list__link" href="photo.html">Фотографии</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="form.html">Конкурс</a>
+              <a class="site-list__link">Конкурс</a>
             </li>
             <li class="site-list__item">
               <a class="site-list__link" href="#">HTML Academy</a>
